--- a/main.html
+++ b/main.html
@@ -8,6 +8,81 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" placeholder="Name" required />
+      </div>
+
+      <div>
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
+      </div>
+
+      <label for="gender">Gender</label>
+      <div>
+        <input type="radio" name="gender" id="gender_m" required />
+        <label for="gender_m">Male</label>
+        <input type="radio" name="gender" id="gender_f" />
+        <label for="gender_f">Female</label>
+      </div>
+
+      <div>
+        <label for="cars">Car Brands</label>
+        <select name="car_brand" id="cars" required>
+          <option value="" selected disabled>
+            --Please choose an option--
+          </option>
+          <option value="bmw">BMW</option>
+          <option value="audi">Audi</option>
+          <option value="mercedez">Mercedez</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="age">Age</label>
+        <input type="number" name="age" id="age" placeholder="Age" required />
+      </div>
+
+      <div>
+        <label for="dob">DOB</label>
+        <input type="date" name="dob" id="dob" required />
+      </div>
+
+      <div>
+        <label for="tel">Phone Number</label>
+        <input
+          type="tel"
+          name="phone_number"
+          id="tel"
+          placeholder="xxx-xxx-xxxx"
+        />
+      </div>
+
+      <div>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+        />
+      </div>
+
+      <div>
+        <input type="checkbox" name="checkbox" id="tos" />
+        <label for="tos">I agree to the TOS.</label>
+      </div>
+      <div>
+        <button type="submit">submit</button>
+      </div>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
