--- a/main.html
+++ b/main.html
@@ -9,67 +9,79 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
-      <label for="name">Name</label>
-      <input type="text" name="name" id="name" placeholder="Name" required />
-      <br />
+      <div>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" placeholder="Name" required />
+      </div>
 
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        placeholder="Email"
-        required
-      />
-      <br />
+      <div>
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
+      </div>
 
       <label for="gender">Gender</label>
-      <input type="radio" name="gender" id="gender_m" required />
-      <label for="gender_m">Male</label>
-      <input type="radio" name="gender" id="gender_f" />
-      <label for="gender_f">Female</label>
-      <br />
+      <div>
+        <input type="radio" name="gender" id="gender_m" required />
+        <label for="gender_m">Male</label>
+        <input type="radio" name="gender" id="gender_f" />
+        <label for="gender_f">Female</label>
+      </div>
 
-      <label for="cars">Car Brands</label>
-      <select name="cars" id="cars" required>
-        <option value="" selected disabled>--Please choose an option--</option>
-        <option value="bmw">BMW</option>
-        <option value="audi">Audi</option>
-        <option value="mercedez">Mercedez</option>
-      </select>
-      <br />
+      <div>
+        <label for="cars">Car Brands</label>
+        <select name="car_brand" id="cars" required>
+          <option value="" selected disabled>
+            --Please choose an option--
+          </option>
+          <option value="bmw">BMW</option>
+          <option value="audi">Audi</option>
+          <option value="mercedez">Mercedez</option>
+        </select>
+      </div>
 
-      <label for="age">Age</label>
-      <input type="number" name="age" id="age" placeholder="Age" required />
-      <br />
+      <div>
+        <label for="age">Age</label>
+        <input type="number" name="age" id="age" placeholder="Age" required />
+      </div>
 
-      <label for="dob">DOB</label>
-      <input type="date" name="dob" id="dob" required />
-      <br />
+      <div>
+        <label for="dob">DOB</label>
+        <input type="date" name="dob" id="dob" required />
+      </div>
 
-      <label for="tel">Phone Number</label>
-      <input
-        type="tel"
-        name="phone_number"
-        id="tel"
-        placeholder="xxx-xxx-xxxx"
-      />
-      <br />
+      <div>
+        <label for="tel">Phone Number</label>
+        <input
+          type="tel"
+          name="phone_number"
+          id="tel"
+          placeholder="xxx-xxx-xxxx"
+        />
+      </div>
 
-      <label for="password">Password</label>
-      <input
-        type="password"
-        name="password"
-        id="password"
-        placeholder="Password"
-      />
-      <br />
+      <div>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+        />
+      </div>
 
-      <input type="checkbox" name="checkbox" id="tos" />
-      <label for="tos">I agree to the TOS.</label>
-      <br />
-
-      <button type="submit">submit</button>
+      <div>
+        <input type="checkbox" name="checkbox" id="tos" />
+        <label for="tos">I agree to the TOS.</label>
+      </div>
+      <div>
+        <button type="submit">submit</button>
+      </div>
     </form>
     <script type="text/javascript" src="./script.js">
 </script>
