--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
       <div>
-        <label for="name">Name</label>
+        <label for="name">Name*</label>
         <input type="text" name="name" id="name" placeholder="Name" required />
       </div>
 
       <div>
-        <label for="email">Email</label>
+        <label for="email">Email*</label>
         <input
           type="email"
           id="email"
@@ -25,7 +25,7 @@
         />
       </div>
 
-      <label for="gender">Gender</label>
+      <label for="gender">Gender*</label>
       <div>
         <input type="radio" name="gender" id="gender_m" required />
         <label for="gender_m">Male</label>
@@ -34,7 +34,7 @@
       </div>
 
       <div>
-        <label for="cars">Car Brands</label>
+        <label for="cars">Car Brands*</label>
         <select name="car_brand" id="cars" required>
           <option value="" selected disabled>
             --Please choose an option--
@@ -46,12 +46,12 @@
       </div>
 
       <div>
-        <label for="age">Age</label>
+        <label for="age">Age*</label>
         <input type="number" name="age" id="age" placeholder="Age" required />
       </div>
 
       <div>
-        <label for="dob">DOB</label>
+        <label for="dob">DOB*</label>
         <input type="date" name="dob" id="dob" required />
       </div>
 
@@ -66,7 +66,7 @@
       </div>
 
       <div>
-        <label for="password">Password</label>
+        <label for="password">Password*</label>
         <input
           type="password"
           name="password"
@@ -76,7 +76,7 @@
       </div>
 
       <div>
-        <input type="checkbox" name="checkbox" id="tos" />
+        <input type="checkbox" name="checkbox" id="tos" required />
         <label for="tos">I agree to the TOS.</label>
       </div>
       <div>
